--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^9",
+    "eslint": "^8.1.0",
+    "eslint-plugin-react": "^7.26.1",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
