--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   "devDependencies": {
     "autoprefixer": "^9",
     "postcss": "^7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "yarn-audit-fix": "^10.0.0"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
